--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ build-backend = "hatchling.build"
 name = "mbox-extractor"
 version = "0.1.0"
 description = "Recursively extract attachments from .mbox files"
+readme = "README.md"
+license = { text = "MIT" }
 authors = [
     { name = "Tiago Silva", email = "eng.tiago.silva@gmail.com" }
 ]
@@ -13,6 +15,16 @@ dependencies = [
     "tqdm"
 ]
 requires-python = ">=3.7"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Topic :: Communications :: Email",
+]
+
+[project.urls]
+Homepage = "https://github.com/tsilva/mbox-extractor"
+Repository = "https://github.com/tsilva/mbox-extractor"
 
 [project.scripts]
 mbox-extractor = "main:main"
