--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,5 @@
 name: Publish to PyPI
+
 on:
   release:
     types: [published]
@@ -12,9 +13,6 @@ jobs:
     environment: pypi
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-      - run: pip install build
-      - run: python -m build
+      - uses: astral-sh/setup-uv@v4
+      - run: uv build
       - uses: pypa/gh-action-pypi-publish@release/v1
