--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mbox-extractor"
-version = "0.1.6"
-description = "Recursively extract attachments from .mbox files"
+version = "0.1.7"
+description = "📬 Recursively extract all attachments from .mbox email archives with a single command"
 readme = "README.md"
 license = { text = "MIT" }
 authors = [
