chore: bump project version to 0.1.9 in pyproject.toml and fix workflow reference in release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,5 +11,5 @@ concurrency:
 
 jobs:
   release:
-    uses: tsilva/.github/.github/workflows/release.yml@main
+    uses: tsilva/.github/workflows/release.yml@main
     secrets: inherit
