--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,10 @@ on:
     branches: [main]
     paths: [pyproject.toml]
 
+permissions:
+  contents: write
+  id-token: write
+
 concurrency:
   group: release
   cancel-in-progress: false
