chore: update release workflow to include testing, PII scanning, and PyPI publishing steps

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,53 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  release:
-    uses: tsilva/.github/.github/workflows/release.yml@main
+  test:
+    uses: tsilva/.github/.github/workflows/test.yml@main
+
+  pii-scan:
+    uses: tsilva/.github/.github/workflows/pii-scan.yml@main
+
+  sync-description:
+    needs: [test, pii-scan]
+    uses: tsilva/.github/.github/workflows/sync-repo-description.yml@main
     secrets: inherit
+
+  publish-pypi:
+    needs: [test, pii-scan]
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    environment: pypi
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Get version
+        id: version
+        run: |
+          VERSION=$(python -c "import tomllib; print(tomllib.load(open('pyproject.toml','rb'))['project']['version'])")
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          echo "tag=v$VERSION" >> "$GITHUB_OUTPUT"
+      - name: Check if tag exists
+        id: check-tag
+        run: |
+          if git rev-parse "refs/tags/${{ steps.version.outputs.tag }}" >/dev/null 2>&1; then
+            echo "exists=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "exists=false" >> "$GITHUB_OUTPUT"
+          fi
+      - name: Setup uv
+        if: steps.check-tag.outputs.exists == 'false'
+        uses: astral-sh/setup-uv@v4
+        with:
+          cache: true
+      - name: Build package
+        if: steps.check-tag.outputs.exists == 'false'
+        run: uv build
+      - name: Create release
+        if: steps.check-tag.outputs.exists == 'false'
+        run: gh release create "${{ steps.version.outputs.tag }}" --title "${{ steps.version.outputs.tag }}" --generate-notes dist/*
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish to PyPI
+        if: steps.check-tag.outputs.exists == 'false'
+        uses: pypa/gh-action-pypi-publish@release/v1
