--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,33 +34,22 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Get version
-        id: version
-        run: |
-          VERSION=$(python -c "import tomllib; print(tomllib.load(open('pyproject.toml','rb'))['project']['version'])")
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-          echo "tag=v$VERSION" >> "$GITHUB_OUTPUT"
-      - name: Check if tag exists
-        id: check-tag
-        run: |
-          if git rev-parse "refs/tags/${{ steps.version.outputs.tag }}" >/dev/null 2>&1; then
-            echo "exists=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "exists=false" >> "$GITHUB_OUTPUT"
-          fi
+      - name: Check version
+        id: check-version
+        uses: tsilva/.github/.github/actions/check-version@main
       - name: Setup uv
-        if: steps.check-tag.outputs.exists == 'false'
+        if: steps.check-version.outputs.tag_exists == 'false'
         uses: astral-sh/setup-uv@v4
         with:
           cache: true
       - name: Build package
-        if: steps.check-tag.outputs.exists == 'false'
+        if: steps.check-version.outputs.tag_exists == 'false'
         run: uv build
       - name: Create release
-        if: steps.check-tag.outputs.exists == 'false'
-        run: gh release create "${{ steps.version.outputs.tag }}" --title "${{ steps.version.outputs.tag }}" --generate-notes dist/*
+        if: steps.check-version.outputs.tag_exists == 'false'
+        run: gh release create "${{ steps.check-version.outputs.tag }}" --title "${{ steps.check-version.outputs.tag }}" --generate-notes dist/*
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish to PyPI
-        if: steps.check-tag.outputs.exists == 'false'
+        if: steps.check-version.outputs.tag_exists == 'false'
         uses: pypa/gh-action-pypi-publish@release/v1
